WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281934
[WASM] Fix consistency check in addBranchNull
https://bugs.webkit.org/show_bug.cgi?id=281934
Summary
[WASM] Fix consistency check in addBranchNull
Yijia Huang
Reported
2024-10-22 16:57:52 PDT
<
rdar://138038945
>
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2024-10-22 17:00:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35596
Yijia Huang
Comment 2
2024-10-23 10:36:20 PDT
***
Bug 281577
has been marked as a duplicate of this bug. ***
Yijia Huang
Comment 3
2024-10-23 10:36:26 PDT
***
Bug 281736
has been marked as a duplicate of this bug. ***
Yijia Huang
Comment 4
2024-10-23 10:36:33 PDT
***
Bug 281960
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2024-10-25 10:41:49 PDT
Committed
285705@main
(4643296068e5): <
https://commits.webkit.org/285705@main
> Reviewed commits have been landed. Closing PR #35596 and removing active labels.
EWS
Comment 6
2024-10-29 09:17:04 PDT
Committed
283286.370@safari-7620-branch
(6bb97a48fd08): <
https://commits.webkit.org/283286.370@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2138 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug